build linux only

--- a/jll/build_tarballs.jl.in
+++ b/jll/build_tarballs.jl.in
@@ -29,7 +29,16 @@ rm cmake_toolchain_patch.ini
 
 # These are the platforms we will build for by default, unless further
 # platforms are passed in on the command line
-platforms = filter(p -> nbits(p) == 64, supported_platforms())
+# platforms = filter(p -> nbits(p) == 64, supported_platforms())
+platforms = [
+#    Platform("i686", "linux"; libc = "glibc")
+    Platform("x86_64", "linux"; libc = "glibc")
+#    Platform("aarch64", "linux"; libc = "glibc")
+#    Platform("powerpc64le", "linux"; libc = "glibc")
+#    Platform("x86_64", "linux"; libc = "musl")
+#    Platform("aarch64", "linux"; libc = "musl")
+#    Platform("x86_64", "freebsd"; )
+]
 
 # The products that we will ensure are always built
 products = [
